GNOME Bugzilla – Bug 766359
auparse: sticky event misordering, got 'segment' before 'caps'
Last modified: 2016-05-20 06:10:56 UTC
Created attachment 327754 [details] [review] Make sure that src pad has caps before sending segment event. Step to reproduce: play the following pipeline: gst-launch-1.0 filesrc location=<file>.au ! auparse ! mulawdec ! audioresample ! audio/x-raw, rate=16000 ! autoaudiosink Notice: (gst-launch-1.0:19602): GStreamer-WARNING **: gstpad.c:5067:store_sticky_event:<auparse0:src> Sticky event misordering, got 'segment' before 'caps' (gst-launch-1.0:19602): GStreamer-WARNING **: gstpad.c:5067:store_sticky_event:<mulawdec0:sink> Sticky event misordering, got 'segment' before 'caps'
commit fe4dc610e61c71acd8747e8bc1fea0630a4bfcf4 Author: Patricia Muscalu <patricia@axis.com> Date: Thu May 12 14:43:43 2016 +0200 auparse: Fix sticky event misordering warning Make sure that src pad has caps before sending segment event. https://bugzilla.gnome.org/show_bug.cgi?id=766359
This should really be ported to baseparse ;)